--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Dashboard#index</h1>
-<p>Find me in app/views/dashboard/index.html.erb</p>
+<h1>Dashboard</h1>
+
+<div id="chart-container">
+  <%= line_chart @followers_cumulative, id: 'followers-chart' %>
+</div>
+
+<button id="toggle-chart">Toggle Bar/Line Chart</button>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var chart = new Chartkick.LineChart("followers-chart", <%= @followers_cumulative.to_json.html_safe %>);
+    var chartContainer = document.getElementById("chart-container");
+    var toggleButton = document.getElementById("toggle-chart");
+
+    toggleButton.addEventListener('click', function() {
+      var chartType = chart.getChartObject().config.type;
+
+      if (chartType === 'line') {
+        chart = new Chartkick.BarChart("followers-chart", <%= @followers_daily.to_json.html_safe %>);
+        toggleButton.textContent = "Show Cumulative Line Chart";
+      } else {
+        chart = new Chartkick.LineChart("followers-chart", <%= @followers_cumulative.to_json.html_safe %>);
+        toggleButton.textContent = "Show Daily Bar Chart";
+      }
+    });
+  });
+</script>
