--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,15 @@
   </head>
 
   <body>
+      <div id="app" class="flex min-h-screen w-full items-center justify-center">
+      <!-- Main Content Starts -->
+      <main class="container flex-grow p-4 sm:p-6">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+    </div>
+    </div>
   </body>
 </html>
+
+
