--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -2,9 +2,9 @@
     <nav class="fixed z-30 w-full bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700 py-3 px-4">
         <div class="flex justify-between items-center max-w-screen-2xl mx-auto">
             <div class="flex justify-start items-center">
-                <a href="{{ "/" | relURL }}" class="flex mr-14">
-                    <img src="/images/logo.svg" class="mr-3 h-8" alt="FlowBite Logo" />
-                    <span class="self-center hidden sm:flex text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+                <a href="<%= root_url %>" class="flex mr-14">
+                    <%= image_tag("logo.gif", height: '32', width: '32', alt: "Echosight") %>
+                    <span class="self-center hidden sm:flex text-2xl font-semibold whitespace-nowrap dark:text-white">&nbsp;Echosight</span>
                 </a>
                 <!-- Desktop menu -->
                 <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1">
@@ -42,9 +42,6 @@
                 </div>
             </div>
             <div class="flex justify-between items-center lg:order-2">
-                <div class="mr-3 -mb-1 hidden sm:block">
-                    <a class="github-button" href="https://github.com/themesberg/flowbite-admin-dashboard" data-color-scheme="no-preference: dark; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star themesberg/flowbite-admin-dashboard on GitHub">Star</a>
-                  </div>
                 <!-- Notifications -->
                 <button type="button" data-dropdown-toggle="notification-dropdown" class="p-2 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600">
                     <span class="sr-only">View notifications</span>
