--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -132,7 +132,13 @@
                 </div>
                 <button type="button" class="flex mx-3 text-sm bg-gray-800 rounded-full md:mr-0 flex-shrink-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" id="userMenuDropdownButton" aria-expanded="false" data-dropdown-toggle="userMenuDropdown">
                     <span class="sr-only">Open user menu</span>
-                    <img class="w-8 h-8 rounded-full" src="https://flowbite.com/docs/images/people/profile-picture-5.jpg" alt="user photo">
+                    <% if current_user.identity && current_user.identity.image_url.present? %>
+                      <img class="w-8 h-8 rounded-full" src="<%= current_user.identity.image_url %>" alt="user photo">
+                    <% else %>
+                      <!-- Fallback image if Twitter image not available -->
+                      <img class="w-8 h-8 rounded-full" src="<%= image_url("default-avatar") %>" alt="user photo">
+                    <% end %>
+
                 </button>
                 <!-- Dropdown menu -->
                 <div class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600" id="userMenuDropdown">
