Update email content for authentication emails

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,7 @@
-<p>Welcome <%= @email %>!</p>
+<p>🌟 Welcome Aboard, <%= @email %>! 🌟</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>We're thrilled to have you with us! Just one small step before you embark on this exciting journey:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>🔗 <strong><%= link_to 'Click Here to Confirm Your Account', confirmation_url(@resource, confirmation_token: @token) %></strong> 🔗</p>
+
+<p>Get ready to explore Echosight! 🚀</p>
