--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,7 +1,9 @@
-<p>Hello <%= @email %>!</p>
+<p>👋 Hey there, <%= @email %>! 👋</p>
 
 <% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
+  <p>Heads up! Your email is on its way to being updated to: <%= @resource.unconfirmed_email %>.</p>
 <% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
+  <p>Congratulations! Your Echosight email has been successfully updated to: <%= @resource.email %>.</p>
 <% end %>
+
+<p>Cheers to new beginnings! 🥳</p>
