--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,5 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>🔒 Hello, <%= @resource.email %>! 🔒</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>Just a quick note to confirm that your Echosight password has been changed securely.</p>
+
+<p>If you didn't initiate this, please contact us immediately on support@echosight.com! Safety first! 🛡️</p>
