--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>🔑 Hey there, <%= @resource.email %>! 🔑</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Need a fresh start with a new password? No worries, we've got you covered!</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>🔗 <strong><%= link_to 'Reset Your Password', edit_password_url(@resource, reset_password_token: @token) %></strong> 🔗</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>If this wasn't you, just ignore this email and everything will stay as it is. Phew! 😌</p>
+
+<p>Remember, your password won't change until you click the link and set up a new one. Stay secure! 🔐</p>
