--- a/app/views/single_message/_sign_up.html.erb
+++ b/app/views/single_message/_sign_up.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full max-w-xl p-6 space-y-8 sm:p-8 bg-white rounded-lg shadow dark:bg-gray-800">
-        <h2 class="text-2xl font-bold text-gray-900 dark:text-white">
+        <h2 class="text-2xl font-bold text-gray-900 dark:text-white text-center">
             Welcome to Echosight!
         </h2>
 
