--- a/app/views/single_message/index.html.erb
+++ b/app/views/single_message/index.html.erb
@@ -4,5 +4,5 @@
         <span>&nbsp;Echosight</span>
     </a>
 
-    <%= render(@single_message_partial)>
+    <%= render(@single_message_partial) %>
 </div>
