--- a/app/views/public_page/index.html.erb
+++ b/app/views/public_page/index.html.erb
@@ -1,31 +1,41 @@
 <div class="flex flex-wrap -m-2">
 
-<a href="#" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-
-<h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Posts</h5>
-<p class="font-normal text-gray-700 dark:text-gray-400">20</p>
-<p class="font-normal text-gray-700 dark:text-gray-400">+5 since last week</p>
+<a href="#" class="block w-full md:w-1/2 lg:w-1/4 p-2">
+  <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Posts</h5>
+    <p class="font-normal text-gray-700 dark:text-gray-400">20</p>
+    <p class="font-normal text-gray-700 dark:text-gray-400">+5 since last week</p>
+  </div>
 </a>
 
-<a href="#" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
 
+  <a href="#" class="block w-full md:w-1/2 lg:w-1/4 p-2">
+    <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Impressions</h5>
 <p class="font-normal text-gray-700 dark:text-gray-400">1.62M</p>
 <p class="font-normal text-gray-700 dark:text-gray-400">30.3% increase</p>
-</a>
+    </div>
+  </a>
 
-<a href="#" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
 
+  <a href="#" class="block w-full md:w-1/2 lg:w-1/4 p-2">
+    <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Profile Clicks</h5>
-<p class="font-normal text-gray-700 dark:text-gray-400">7.23K/p>
+<p class="font-normal text-gray-700 dark:text-gray-400">7.23K</p>
 <p class="font-normal text-gray-700 dark:text-gray-400">142% increase</p>
-</a>
+    </div>
+  </a>
 
 
-<a href="#" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+  <a href="#" class="block w-full md:w-1/2 lg:w-1/4 p-2">
+    <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
 
 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Followers</h5>
 <p class="font-normal text-gray-700 dark:text-gray-400">20.46K</p>
 <p class="font-normal text-gray-700 dark:text-gray-400">2.3% increase</p>
-</a>
+    </div>
+  </a>
+
+
 </div>
+
