--- a/app/views/public_page/index.html.erb
+++ b/app/views/public_page/index.html.erb
@@ -39,3 +39,20 @@
 
 </div>
 
+<section class="bg-gray-100 text-gray-800 py-8 px-4 sm:px-6 lg:px-8 rounded-xl">
+  <div class="max-w-7xl mx-auto text-center">
+    <h2 class="text-3xl font-extrabold sm:text-4xl">
+      Want to Stand Out?
+    </h2>
+    <p class="mt-4 text-lg leading-6">
+      Get your own public page and join the community of Echosight trendsetters.
+    </p>
+    <div class="mt-8 flex justify-center">
+      <div class="inline-flex rounded-md shadow">
+        <a href="<%=new_registration_path(:user) %>" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+          Join Echosight Now
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
