--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,23 @@
       <%= alert %>
     </div>
   <% end %>
-  <div class="logo-container">
-    <a href="<%= root_url %>" class="flex items-center mb-8 text-2xl font-semibold lg:mb-10 dark:text-white">
-      <%= image_tag("logo.gif", height: '32', width: '32', alt: "Echosight") %>
-      <span>&nbsp;Echosight</span>
-    </a>
+  <div class="flex justify-between items-start">
+    <div class="logo-container">
+      <a href="<%= root_url %>" class="flex items-center text-2xl font-semibold dark:text-white">
+        <%= image_tag("logo.gif", height: '50', width: '50', alt: "Echosight") %>
+        <span class="align-middle">&nbsp;Echosight</span>
+      </a>
+    </div>
+    <div class="profile-container">
+      <div class="flex items-center space-x-3">
+        <img class="h-12 w-12 rounded-full" src="https://placekitten.com/g/200/300" alt="Profile picture">
+        <div class="flex flex-col justify-center">
+          <div class="text-lg font-medium leading-6 text-gray-900">Loftwah</div>
+          <div class="text-sm font-medium leading-5 text-gray-500">@loftwah</div>
+        </div>
+      </div>
+    </div>
   </div>
-
     <%= yield %>
   </body>
 </html>
