--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -10,20 +10,16 @@
                 <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1">
                     <ul class="flex flex-col mt-4 space-x-6 text-sm font-medium lg:flex-row xl:space-x-8 lg:mt-0">
                         <li>
-                            <a href="#" class="block rounded text-primary-700 dark:text-primary-500" aria-current="page">Home</a>
+                            <a href="<%= root_url %>" class="block rounded text-primary-700 dark:text-primary-500" aria-current="page">Home</a>
                         </li>
                         <li>
-                            <a href="#" class="block text-gray-700 hover:text-primary-700 dark:text-gray-400 dark:hover:text-white">Messages</a>
+                            <a href="#" class="block text-gray-700 hover:text-primary-700 dark:text-gray-400 dark:hover:text-white">Leaderboards</a>
                         </li>
                         <li>
-                            <a href="#" class="block text-gray-700 hover:text-primary-700 dark:text-gray-400 dark:hover:text-white">Profile</a>
+                            <a href="<%= edit_user_registration_path %>" class="block text-gray-700 hover:text-primary-700 dark:text-gray-400 dark:hover:text-white">My Profile & Settings</a>
                         </li>
-                        <li>
-                            <a href="#" class="block text-gray-700 hover:text-primary-700 dark:text-gray-400 dark:hover:text-white">Settings</a>
-                        </li>
-                        <li>
+                        <!--li>
                             <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex justify-between items-center py-2 pr-4 pl-3 w-full font-medium text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-primary-700 md:p-0 md:w-auto dark:text-gray-400 dark:hover:text-white dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">Dropdown <svg class="ml-1 w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></button>
-                            <!-- Dropdown menu -->
                             <div id="dropdownNavbar" class="hidden z-20 w-44 font-normal bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600">
                                 <ul class="py-1 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                                   <li>
@@ -37,7 +33,7 @@
                                   </li>
                                 </ul>
                             </div>
-                        </li>
+                        </li-->
                     </ul>
                 </div>
             </div>
@@ -147,7 +143,7 @@
                     </div>
                     <ul class="py-1 font-light text-gray-500 dark:text-gray-400" aria-labelledby="userMenuDropdownButton">
                         <li>
-                            <a href="<%= edit_user_registration_path %>" class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">My Profile & Settings</a>
+                            <a href="<%= edit_user_registration_path %>" class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">My Profile &amp; Settings</a>
                         </li>
                         <li>
                             <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white' %>
