--- a/app/views/public_page/_followers_graph.html.erb
+++ b/app/views/public_page/_followers_graph.html.erb
@@ -1,5 +1,5 @@
 <!-- followers -->
-<h2 class="text-2xl font-bold text-gray-900 dark:text-white">Followers</h2>
+<h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white">Followers</h2>
 <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
   <div id="followers-chart"></div>
 </div>
