--- a/app/views/public_page/index.html.erb
+++ b/app/views/public_page/index.html.erb
@@ -35,8 +35,10 @@
 
 
 <%= render "public_page/followers_graph" %>
-
 <%= render "public_page/engagement_rate" %>
+<%= render "public_page/impressions_over_time" %>
+<%= render "public_page/profile_conversion_rate" %>
+
 
 <section class="py-8 px-4">
   <div class="max-w-6xl mx-auto">
@@ -69,7 +71,7 @@
       Want to Stand Out?
     </h2>
     <p class="mt-4 text-lg leading-6">
-      Get your own public page and join the community of Echosight trendsetters.
+      Get your own public page with private dashboard and join the community of Echosight trendsetters.
     </p>
     <div class="mt-8 flex justify-center">
       <div class="inline-flex rounded-md shadow">
