--- a/app/views/public_page/index.html.erb
+++ b/app/views/public_page/index.html.erb
@@ -65,8 +65,8 @@
 </section>
 
 
-<section class="bg-gray-100 text-gray-800 py-8 px-4 sm:px-6 lg:px-8 rounded-xl">
-  <div class="max-w-7xl mx-auto text-center">
+<section class="bg-gray-100 text-gray-800 py-8 px-4 sm:px-6 lg:px-8 rounded-xl w-full">
+  <div class="w-full mx-auto text-center">
     <h2 class="text-3xl font-extrabold sm:text-4xl">
       Want to Stand Out?
     </h2>
@@ -82,4 +82,5 @@
     </div>
   </div>
 </section>
+
 
