--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,10 @@
     </div>
     <div class="profile-container">
       <div class="flex items-center space-x-3">
+        <div class="flex flex-col justify-center">
+          <button type="button" class="call-to-action-button call-to-action-button-indigo">Free trial</button>
+          <!-- Share Page with friends -->
+        </div>
         <img class="h-12 w-12 rounded-full" src="https://placekitten.com/g/200/300" alt="Profile picture">
         <div class="flex flex-col justify-center">
           <div class="text-lg font-medium leading-6 text-gray-900">Loftwah</div>
