--- a/app/views/public_page/index.html.erb
+++ b/app/views/public_page/index.html.erb
@@ -75,7 +75,7 @@
     </p>
     <div class="mt-8 flex justify-center">
       <div class="inline-flex rounded-md shadow">
-        <a href="<%=new_registration_path(:user) %>" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+        <a href="<%=new_registration_path(:user) %>" class="call-to-action-button call-to-action-button-indigo">
           Join Echosight Now
         </a>
       </div>
