Fix Change your password page copy fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,15 +41,7 @@
         <span class="align-middle">&nbsp;Echosight</span>
       </a>
     </div>
-    <div class="profile-container">
-      <div class="flex items-center space-x-3">
-        <img class="h-12 w-12 rounded-full" src="https://placekitten.com/g/200/300" alt="Profile picture">
-        <div class="flex flex-col justify-center">
-          <div class="text-lg font-medium leading-6 text-gray-900">Loftwah</div>
-          <div class="text-sm font-medium leading-5 text-gray-500">@loftwah</div>
-        </div>
-      </div>
-    </div>
+    <%= content_for :profile_container if current_user.nil? %>
   </div>
     <%= yield %>
   </body>
