--- a/app/views/public_page/index.html.erb
+++ b/app/views/public_page/index.html.erb
@@ -2,14 +2,34 @@
 <div class="profile-container">
   <div class="flex items-center space-x-3">
     <%= render PrimaryActionButtonComponent.new(user: current_or_guest_user) %>
-    <img class="h-12 w-12 rounded-full" src="https://placekitten.com/g/200/300" alt="Profile picture">
-    <div class="flex flex-col justify-center">
-      <div class="text-lg font-medium leading-6 text-gray-900">Loftwah</div>
-      <div class="text-sm font-medium leading-5 text-gray-500">@loftwah</div>
-    </div>
   </div>
 </div>
 <% end %>
+
+<div class="relative bg-white">
+  <!-- Header Photo -->
+  <img class="h-48 w-full object-cover shadow-lg" src="https://pbs.twimg.com/profile_banners/1192091185/1701762563/1500x500" alt="Twitter Header Photo">
+
+  <!-- Profile Container -->
+  <div class="flex items-end justify-between px-4 py-4 lg:py-8">
+    <!-- Profile Photo and Info -->
+    <div class="flex items-center space-x-4">
+      <!-- Profile Photo -->
+      <img class="h-24 w-24 rounded-full border-4 border-white shadow-lg" src="http://placekitten.com/g/200/300" alt="Twitter Profile Photo">
+      <!-- Profile Info -->
+      <div>
+        <h1 class="text-2xl font-bold text-gray-900">Dean Lofts</h1>
+        <p class="text-sm text-gray-500">@loftwah</p>
+      </div>
+    </div>
+
+    <!-- Quote Container -->
+    <div class="bg-white bg-opacity-80 py-2 px-4 rounded-lg">
+      <p class="text-xl font-semibold italic text-gray-900">"Any sufficiently advanced technology is equivalent to magic." - Arthur C. Clarke</p>
+    </div>
+  </div>
+</div>
+
 
 <div class="flex flex-wrap">
   <!-- Posts -->
