Posts on public page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
         <span class="align-middle">&nbsp;Echosight</span>
       </a>
     </div>
-    <%= content_for :profile_container if current_user.nil? %>
+    <%= content_for :profile_container %>
   </div>
     <%= yield %>
   </body>
