Implement unique public page based on twitter handle

--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -68,11 +68,11 @@
 </div>
 
 
-<%= render "public_page/followers_graph" %>
-<%= render "public_page/engagement_rate" %>
-<%= render "public_page/impressions_over_time" %>
-<%= render "public_page/profile_conversion_rate" %>
-<%= render "public_page/posts" %>
+<%= render "public_pages/followers_graph" %>
+<%= render "public_pages/engagement_rate" %>
+<%= render "public_pages/impressions_over_time" %>
+<%= render "public_pages/profile_conversion_rate" %>
+<%= render "public_pages/posts" %>
 
 
 
