Populate public page

--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -19,8 +19,8 @@
 
       <!-- Profile Info -->
       <div>
-        <h1 class="text-2xl font-bold text-gray-900">Dean Lofts</h1>
-        <p class="text-sm text-gray-500">@loftwah</p>
+        <h1 class="text-2xl font-bold text-gray-900"><%= @user.name %></h1>
+        <p class="text-sm text-gray-500"><%= @user.twitter_handle %></p>
       </div>
     </div>
 
