--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -37,10 +37,11 @@
   <a href="#" class="block w-full md:w-1/2 lg:w-1/4 p-2">
     <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
       <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Posts</h5>
-      <p class="font-normal text-gray-700 dark:text-gray-400">20</p>
-      <p class="font-normal text-green-600 dark:text-green-400">+5 since last week</p>
+      <p class="font-normal text-gray-700 dark:text-gray-400"><%= @tweets_count %></p>
+      <p class="font-normal text-green-600 dark:text-green-400"><%= "+#{@tweets_change_since_last_week} since last week" %></p>
     </div>
   </a>
+
   <!-- Impressions -->
   <a href="#" class="block w-full md:w-1/2 lg:w-1/4 p-2">
     <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
