--- a/app/views/public_pages/_posts.html.erb
+++ b/app/views/public_pages/_posts.html.erb
@@ -1,4 +1,4 @@
-<h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white">Posts</h2>
+<h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white">Top Posts</h2>
 
 <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
     <table class="w-full text-sm text-center text-gray-500 dark:text-gray-400">
